force-app/main/default/objects/Processing_Fee__c/Processing_Fee__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Processing Fee</label>
</CustomObject>