force-app/main/default/objects/Processing_Fee__c/fields/Flat_Free__c.field-meta.xml
<CustomField>
    <fullName>Flat_Free__c</fullName>
    <description>A flat fee to charge for a processing fee on donations.</description>
    <label>Flat Free</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>