force-app/main/default/objects/Processing_Fee__c/fields/Processing_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fee_Percentage__c</fullName>
    <description>The percentage used to calculate the processing free of donations.</description>
    <label>Processing Fee Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>