force-app/main/default/objects/Processing_Fee__c/fields/Use_Flat_Fee__c.field-meta.xml
<CustomField>
    <fullName>Use_Flat_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether a flat fee or percentage is used to determine the processing fee for donations.</description>
    <label>Use Flat Fee</label>
    <type>Checkbox</type>
</CustomField>